# bluetooth_classic

./: README.md
flutter/: main.dart  main_with_dropdownbutton.txt
picow/: CMakeLists.txt  classic_bluetooth_2way.c  spp_counter.c
